# simple-nasm

./: README.md  syscalls.inc
hello_c/: hello.asm
hello_cmake/: CMakeLists.txt
hello_cmake/src/: main.c
hello_makefile/: Makefile  hello.asm  main.c
hello_nasm/: hello.asm
